# GaME

./: .gitignore  .gitmodules  BUILD.gn  Changelog  CodingConventions  DEPS  GaME.sln  Makefile  README.md  SConstruct  ToDo
build_overrides/: build.gni  glslang.gni  gtest.gni  spirv_tools.gni  vulkan_headers.gni
external_libs/v8-7.4.256/libs/: fuzzer_support.lib  json_fuzzer.lib  lib_wasm_fuzzer_common.lib  multi_return_fuzzer.lib  parser_fuzzer.lib  regexp_builtins_fuzzer.lib  regexp_fuzzer.lib  torque_base.lib  torque_ls_base.lib  v8_external_snapshot.lib  v8_init.lib  v8_libbase.lib  v8_libplatform.lib  v8_libsampler.lib  v8_nosnapshot.lib  wasm_async_fuzzer.lib  wasm_code_fuzzer.lib  wasm_compile_fuzzer.lib  wasm_fuzzer.lib  wasm_module_runner.lib
external_libs/v8-7.4.256/libs/src/inspector/: inspector.lib
external_libs/vulkan-1.1.85.0/include/libshaderc/: shaderc.h  shaderc.hpp
gn/testing/gmock/: BUILD.gn
gn/testing/gtest/: BUILD.gn
include/xerces-3.2.0/xercesc/util/: Xerces_autoconf_config.hpp
src/: Addin.cpp  Addin.h  AddinContainer.cpp  AddinContainer.h  AddinHeader.cpp  AddinHeader.h  AddinInfo.cpp  AddinInfo.h  CommonTypes.h  DefaultEngineConfig.h  Engine.cpp  Engine.h  EngineComponent.cpp  EngineComponent.h  EngineComponentConfig.cpp  EngineComponentConfig.h  EngineComponentInfo.cpp  EngineComponentInfo.h  EngineComponentVersionInfo.cpp  EngineComponentVersionInfo.h  EngineConfig.cpp  EngineConfig.h  GaME.h  InfoBase.cpp  InfoBase.h  Instanceable.cpp  Instanceable.h  Log.cpp  Log.h  Main.cpp  SConscript  System.cpp  System.h  SystemConfig.cpp  SystemConfig.h  SystemVersionInfo.cpp  SystemVersionInfo.h  Version.cpp  Version.h  VersionInfo.cpp  (+16 more)
src/addin/: Addin.cpp  Addin.h  AddinHeader.cpp  AddinHeader.h  SystemProvider.h  addin.cpp  addin.h  addin_header.cpp  addin_header.h  system_provider.h
src/content/: content.cpp  content.h  xml_content.cpp  xml_content.h
src/content/xml/: xml_attribute.cpp  xml_attribute.h  xml_document.cpp  xml_document.h  xml_node.cpp  xml_node.h  xml_range.h  xml_serializable.h
src/data/: Data.cpp  Data.h  DataFactory.h  DataLoader.h  XMLData.cpp  XMLData.h  XMLSerializable.h
src/data/xml/: XmlAttribute.cpp  XmlAttribute.h  XmlDocument.cpp  XmlDocument.h  XmlNode.cpp  XmlNode.h  XmlRange.h  XmlSerializable.h
src/framework/: Component.cpp  Component.h  ComponentConfig.cpp  ComponentConfig.h  Entity.cpp  Entity.h  EntitySpecification.cpp  EntitySpecification.h  Game.cpp  Game.h  GameComponent.cpp  GameComponent.h  GameConfig.cpp  GameConfig.h  GameHeader.cpp  GameHeader.h  GameInfo.cpp  GameInfo.h  GameObject.cpp  GameObject.h  GameSpecification.cpp  GameSpecification.h  GameTime.cpp  GameTime.h  System.cpp  System.h  SystemInfo.cpp  SystemInfo.h  component.cpp  component.h  component_config.cpp  component_config.h  component_info.cpp  component_info.h  entity.cpp  entity.h  entity_specification.cpp  entity_specification.h  framework.h  game.cpp  (+14 more)
src/graphics/: Image.cpp  Image.h  Vertex.h  image.cpp  image.h  model_view_projection.cpp  model_view_projection.h  vertex.cpp  vertex.h
src/graphics/vulkan/: Shader.cpp  Shader.h  Vulkan.cpp  Vulkan.h  VulkanFunctions.cpp  VulkanFunctions.h  shader.cpp  shader.h  texture.cpp  texture.h  vulkan.cpp  vulkan.h  vulkan_functions.cpp  vulkan_functions.h
src/lib/: CStringHash.h  CommandLine.cpp  CommandLine.h  CommonTypes.h  FilePath.cpp  FilePath.h  PugiXML.cpp  PugiXML.h  StringUtil.cpp  StringUtil.h  V8.cpp  V8.h  Vulkan.cpp  Vulkan.h  Xerces.cpp  Xerces.h  XercesUtils.cpp  XercesUtils.h  command_line.cpp  command_line.h  file_path.cpp  file_path.h  format.cpp  format.h  spirv_tools.cpp  spirv_tools.h  string_util.cpp  string_util.h  v8.h
src/lib/vulkan/: VkDeleter.h  Vulkan.cpp  Vulkan.h
src/platform/: DefaultPlatformConfig.h  FontLoader.h  GLFWVulkan.cpp  GLFWVulkan.h  GLFWVulkanConfig.cpp  GLFWVulkanConfig.h  InputKey.cpp  InputKey.h  Platform.cpp  Platform.h  PlatformConfig.cpp  PlatformConfig.h  PlatformInfo.cpp  PlatformInfo.h  VulkanPlatform.cpp  VulkanPlatform.h  Win32Vulkan.cpp  Win32Vulkan.h  default_platform.h  font_loader.h  glfw_vulkan.cpp  glfw_vulkan.h  glfw_vulkan_config.cpp  glfw_vulkan_config.h  input_key.cpp  platform.cpp  platform.h  platform_config.cpp  platform_config.h  vulkan_platform.cpp  vulkan_platform.h  win32_vulkan.cpp  win32_vulkan.h
src/platform/glfw/: GLFWVulkan.cpp  GLFWVulkan.h
src/platform/win32/: Win32Config.cpp  Win32Config.h  Win32Vulkan.cpp  Win32Vulkan.h
src/platform/x11/: X11Config.cpp  X11Config.h  X11OpenGL.cpp  X11OpenGL.h  X11Vulkan.cpp  X11Vulkan.h  x11_config.cpp  x11_config.h  x11_vulkan.cpp  x11_vulkan.h
src/scripting/: Script.cpp  Script.h  ScriptContext.cpp  ScriptContext.h  ScriptEnvironment.cpp  ScriptEnvironment.h  ScriptUtil.cpp  Scriptable.cpp  Scriptable.h  script.cpp  script_environment.cpp  script_environment.h
src/simplerenderer/: Addin.cpp  Addin.h  Config.cpp  Config.h  SConscript  SimpleRenderer.addin  SimpleRenderer.cpp  SimpleRenderer.h  SimpleRenderer.xml  SimpleRendererAddin.cpp  SimpleRendererAddin.h
src/util/: CommandLine.cpp  CommandLine.h  FilePath.cpp  FilePath.h  StringUtil.cpp  StringUtil.h  Version.cpp  Version.h
src/vulkan_gui/: addin.cpp  addin.h  component.cpp  component.h  component_config.cpp  component_config.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_widgets.cpp
src/vulkan_renderer/: addin.cpp  addin.h  config.cpp  config.h  mesh_component.cpp  mesh_component.h  renderer.cpp  renderer.h  test.vert  vulkan_renderer.addin
tests/: SConscript  TestEngine.js  TestEngine.xml  TestEntity.entity  TestGame.engine_config  TestGame.game  TestGame.xml
vsprojects/: ConsoleApplication.vcxproj  ConsoleApplication.vcxproj.filters  GaME.vcxproj  GaME.vcxproj.filters  SimpleRenderer.vcxproj  SimpleRenderer.vcxproj.filters  game_base.vcxproj  game_base.vcxproj.filters  pugixml.vcxproj  pugixml.vcxproj.filters
